# screen-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  PROVENANCE.md  README.md  RELEASE.md  SECURITY.md  UPSTREAM.md  deny.toml
.github/workflows/: ci.yml
compatibility/cases/: open.md
compatibility/features/: screen-5.0.2.toml
compatibility/issues/: missing-manifest-work-items.md
compatibility/profiles/: linux-glibc-screen-4.9.1.toml  linux-glibc-screen-5.0.2.toml
compatibility/reports/: current-matrix.md  manifest-summary.md
crates/screen-cli/: Cargo.toml
crates/screen-cli/src/: invocation.rs  lib.rs  main.rs
crates/screen-cli/tests/: differential_cli.rs  differential_fullscreen.rs  differential_multi_window.rs  differential_prefix.rs  differential_query.rs  differential_session.rs  differential_x_commands.rs  session_lifecycle.rs
crates/screen-config/: Cargo.toml
crates/screen-config/src/: lib.rs
crates/screen-core/: Cargo.toml
crates/screen-core/src/: hardstatus.rs  lib.rs
crates/screen-daemon/: Cargo.toml
crates/screen-daemon/src/: encoding.rs  lib.rs  peer_cred.rs  termcap.rs
crates/screen-daemon/tests/: socket_daemon.rs
crates/screen-nix-interop/: Cargo.toml
crates/screen-nix-interop/src/: discovery.rs  lib.rs  protocol.rs
crates/screen-platform/: Cargo.toml
crates/screen-platform/src/: lib.rs  runtime.rs  utmp.rs
crates/screen-platform/tests/: runtime_directory.rs
crates/screen-protocol/: Cargo.toml
crates/screen-protocol/src/: lib.rs
crates/screen-pty/: Cargo.toml
crates/screen-pty/src/: lib.rs
crates/screen-terminal/: Cargo.toml
crates/screen-terminal/src/: lib.rs
crates/screen-terminal/tests/: isolated_terminal_tests.rs
crates/screen-testkit/: Cargo.toml
crates/screen-testkit/src/: comparison.rs  environment.rs  executable.rs  lib.rs  pty.rs
crates/screen-testkit/tests/: pty_shell.rs
docker/linux-glibc/: Dockerfile  run-matrix.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: protocol_decoder.rs  screenrc_parser.rs  terminal_parser.rs
scripts/: compatibility-summary.py  install-screen-reference.sh  run-differential-matrix.sh  validate-compatibility-manifest.py
tests/cli/: basic.rs
tests/config/: basic.rs
tests/differential/: basic.rs
tests/protocol/: basic.rs
tests/sessions/: basic.rs
tests/signals/: basic.rs
tests/terminal/: basic.rs
