[package]
name = "screen-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
screen-platform = { path = "../screen-platform", version = "0.0.1" }
screen-pty = { path = "../screen-pty", version = "0.0.1" }

[lints]
workspace = true
